@@ -1,17 +1,19 @@
 package bank_exam.entities.client;
 
+import static bank_exam.common.ExceptionMessages.*;
+
 public abstract class BaseClient implements Client {
 
-    protected String name;
-    protected String id;
-    protected int interest;
-    protected double income;
+    private String name;
+    private String id;
+    private int interest;
+    private double income;
 
     public BaseClient(String name, String id, int interest, double income) {
-        this.name = name;
-        this.id = id;
+        this.setName(name);
+        this.setId(id);
         this.interest = interest;
-        this.income = income;
+        this.setIncome(income);
     }
 
     @Override
@@ -21,24 +23,28 @@ public abstract class BaseClient implements Client {
 
     @Override
     public void setName(String name) {
-        if (name == null || name.trim().isBlank()) {
-            throw new IllegalArgumentException("Client name cannot be null or empty.");
+        if (name == null || name.trim().isEmpty()) {
+            throw new IllegalArgumentException(CLIENT_NAME_CANNOT_BE_NULL_OR_EMPTY);
         }
 
         this.name = name;
     }
 
-    public void setId(String id) {
-        if (id == null || id.trim().isBlank()) {
-            throw new IllegalArgumentException("Client’s ID cannot be null or empty.");
+    private void setId(String id) {
+        if (id == null || id.trim().isEmpty()) {
+            throw new IllegalArgumentException(CLIENT_ID_CANNOT_BE_NULL_OR_EMPTY);
         }
 
         this.id = id;
     }
 
+    public void setInterest(int interest) {
+        this.interest = interest;
+    }
+
     public void setIncome(double income) {
         if (income <= 0 ) {
-            throw new IllegalArgumentException("Client income cannot be below or equal to 0.");
+            throw new IllegalArgumentException(CLIENT_INCOME_CANNOT_BE_BELOW_OR_EQUAL_TO_ZERO);
         }
 
         this.income = income;
@@ -49,15 +55,14 @@ public abstract class BaseClient implements Client {
         return this.interest;
     }
 
+    public String getId() {
+        return id;
+    }
+
     @Override
     public double getIncome() {
         return this.income;
     }
 
-//    @Override
-//    public void increase() {
-//        //The increase() method increases the Client’s interest.
-//        // Keep in mind that some Client can implement the method differently.
-//    }
 }
 
